--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -12,9 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2020-07-05T09:44:15.950672Z",
+     "start_time": "2020-07-05T09:44:15.945695Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -34,59 +37,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2020-07-05T09:48:25.549366Z",
+     "start_time": "2020-07-05T09:48:25.543079Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is nothing to print, the variable is not defined\n"
+     ]
+    }
+   ],
    "source": [
     "# Modify the code below:\n",
     "\n",
-    "print(some_string)"
+    "try:\n",
+    "    print(some_string)\n",
+    "except:\n",
+    "    print('There is nothing to print, the variable is not defined')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2020-07-05T09:48:26.971150Z",
+     "start_time": "2020-07-05T09:48:26.964283Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the list does not contain an integer or a float number\n"
+     ]
+    }
+   ],
    "source": [
     "# Modify the code below:\n",
     "\n",
-    "for i in ['a','b','c']:\n",
-    "    print (i**2)"
+    "try:\n",
+    "    for i in ['a','b','c']:\n",
+    "        print (i**2)\n",
+    "except: \n",
+    "    print('the list does not contain an integer or a float number')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2020-07-05T09:48:57.541537Z",
+     "start_time": "2020-07-05T09:48:57.534761Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not possible to divide by 0, change the y value\n"
+     ]
+    }
+   ],
    "source": [
     "# Modify the code below:\n",
     "\n",
     "x = 5\n",
     "y = 0\n",
     "\n",
-    "z = x/y"
+    "try:\n",
+    "    z = x/y\n",
+    "except:\n",
+    "    print('Not possible to divide by 0, change the y value')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2020-07-05T09:49:58.444781Z",
+     "start_time": "2020-07-05T09:49:58.437612Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The element in the list does not exist. You are trying to access the wrong position\n"
+     ]
+    }
+   ],
    "source": [
     "# Modify the code below:\n",
     "\n",
     "abc=[10,20,20]\n",
-    "print(abc[3])"
+    "try:\n",
+    "    print(abc[3])\n",
+    "except:\n",
+    "    print('The element in the list does not exist. You are trying to access the wrong position')"
    ]
   },
   {
@@ -102,20 +161,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-05T10:05:53.154854Z",
+     "start_time": "2020-07-05T10:05:53.136029Z"
+    }
+   },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "math domain error",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-04aad1ad646d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mmath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0msqrt_for_all\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-5-04aad1ad646d>\u001b[0m in \u001b[0;36msqrt_for_all\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;31m# Sample Input: -4\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;31m# Sample Output: 2.0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mmath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0msqrt_for_all\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: math domain error"
-     ]
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -128,6 +190,11 @@
     "    \n",
     "    # Sample Input: -4\n",
     "    # Sample Output: 2.0\n",
+    "    \n",
+    "    # If the input value is negative, obtain the absolute value of it\n",
+    "    if x < 0:\n",
+    "        x = abs(x)\n",
+    "        \n",
     "    return math.sqrt(x)\n",
     "\n",
     "sqrt_for_all(-1)"
@@ -135,20 +202,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-05T10:07:15.049304Z",
+     "start_time": "2020-07-05T10:07:15.039065Z"
+    }
+   },
    "outputs": [
     {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-d7a9882673ba>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0mdivide\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-6-d7a9882673ba>\u001b[0m in \u001b[0;36mdivide\u001b[1;34m(x, y)\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;31m# Sample Input: 5, 1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;31m# Sample Output: 5.0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mdivide\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -161,27 +231,35 @@
     "    \n",
     "    # Sample Input: 5, 1\n",
     "    # Sample Output: 5.0\n",
-    "    return x / y\n",
+    "    \n",
+    "    if y == 0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        \n",
+    "        return x / y\n",
     "\n",
     "divide(5, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-05T10:14:13.626115Z",
+     "start_time": "2020-07-05T10:14:13.614138Z"
+    }
+   },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-19462e806ad7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0melement\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0melement\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ml\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m \u001b[0madd_elements\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-7-19462e806ad7>\u001b[0m in \u001b[0;36madd_elements\u001b[1;34m(a, l)\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[1;31m# Sample Input: 5, 6\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;31m# Sample Output: [11]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0melement\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0melement\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ml\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0madd_elements\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
-     ]
+     "data": {
+      "text/plain": [
+       "[11]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -198,7 +276,11 @@
     "    \n",
     "    # Sample Input: 5, 6\n",
     "    # Sample Output: [11]\n",
-    "    return [a + element for element in l]\n",
+    "    \n",
+    "    if isinstance(l, list):\n",
+    "        return [a + element for element in l]\n",
+    "    else:\n",
+    "        return [a + l]\n",
     "        \n",
     "add_elements(5, 6)"
    ]
@@ -214,33 +296,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2020-07-05T10:23:36.683592Z",
+     "start_time": "2020-07-05T10:23:36.673767Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Modify the code below:\n",
     "\n",
     "l = [1,2,3,4]\n",
     "\n",
-    "sum([element + 1 for element in l]"
+    "sum([element + 1 for element in l])\n",
+    "\n",
+    "# The ) was missing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2020-07-05T10:24:09.248990Z",
+     "start_time": "2020-07-05T10:24:09.241830Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current element in the loop is 1\n",
+      "The current element in the loop is 2\n",
+      "The current element in the loop is 3\n",
+      "The current element in the loop is 4\n"
+     ]
+    }
+   ],
    "source": [
     "# Modify the code below:\n",
     "\n",
     "l = [1,2,3,4]\n",
     "\n",
     "for element in l:\n",
-    "    print(\"The current element in the loop is\" + element)"
+    "    print(f\"The current element in the loop is {element}\")\n",
+    "    \n",
+    "# It was wrong how to print the element value"
    ]
   },
   {
@@ -254,9 +368,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2020-07-05T10:30:12.383792Z",
+     "start_time": "2020-07-05T10:30:12.377766Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -271,14 +388,21 @@
     "    # Sample Input: 5\n",
     "    # Sample Output: 3.21887\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    if x == 0:\n",
+    "        raise ValueError(\"The input number is 0\")\n",
+    "    \n",
+    "    return math.log(x ** 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2020-07-05T10:33:18.851072Z",
+     "start_time": "2020-07-05T10:33:18.845492Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -290,7 +414,11 @@
     "    # Sample Input: 'John'\n",
     "    # Sample Output: True\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    if x.islower():\n",
+    "        raise TypeError(\"The input string does not contain any capital letter\")\n",
+    "    else:\n",
+    "        return True"
    ]
   },
   {
@@ -343,7 +471,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
