Bonus challenge done

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -434,9 +434,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2020-07-05T10:41:21.632708Z",
+     "start_time": "2020-07-05T10:41:21.626523Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -451,7 +454,10 @@
     "    # Sample Output: 41.0\n",
     "    \n",
     "    #Your Code here:\n",
-    "        "
+    "    try:\n",
+    "        return arg*1.8+32\n",
+    "    except:\n",
+    "        return None"
    ]
   }
  ],
